# Sireof

./: CMakeList.txt  CMakeLists.txt  board.cpp  board.hpp  game.cpp  game.hpp  history.cpp  history.hpp  main.cpp  menu.cpp  menu.hpp  params.cpp  params.hpp
gamelib/: board.cpp  board.hpp  game.cpp  game.hpp  history.cpp  history.hpp  menu.cpp  params.cpp  params.hpp
